# modLife1

./: CMakeLists.txt  main.cpp  save20
Headers/: Animal.h  Antelope.h  Belladonna.h  Fox.h  Grass.h  Guarana.h  Human.h  Organism.h  Plant.h  Sheep.h  Sosnowsky.h  SowThistle.h  Turtle.h  Wolf.h  World.h
Source/: Animal.cpp  Antelope.cpp  Belladonna.cpp  Fox.cpp  Grass.cpp  Guarana.cpp  Human.cpp  Organism.cpp  Plant.cpp  Sheep.cpp  Sosnowsky.cpp  SowThistle.cpp  Turtle.cpp  Wolf.cpp  World.cpp
